--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Joshua Niemelä <josh@jniemela.dk> and contributors"]
 version = "0.1.0"
 
 [deps]
+Coverage = "a2441757-f6aa-5fb2-8edb-039e3f45d037"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 MLStyle = "d8e11817-5142-5d16-987a-aa16d5891078"
