CompatHelper: add new compat entry for DocumenterTools at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ Pipe = "b98c9c47-44ae-5843-9183-064241ee97a0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
+DocumenterTools = "0.1"
 MLStyle = "0.4"
 julia = "1.8"
 
